fix(Collective): Fix alignment of page heading skeleton

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -12,6 +12,7 @@
 
 	.landing-page-widgets,
 	.text-container-heading,
+	.page-heading-skeleton,
 	.page-content-skeleton {
 		max-width: var(--text-editor-max-width);
 		margin: auto;
